feat: ReportMemo 기능 구현 및 수정